added product migration || added add product page and routes

--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -1,6 +1,20 @@
 .div-center {
     text-align: center;
     padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.div-center h1 {
+    font-size: 40px;
+    padding-bottom: 40px;
+}
+
+.div-center input {
+    color: #000;
+}
+
+.div-center select {
+    color: #000;
 }
 
 .h2-font {
@@ -18,4 +32,13 @@
     text-align: center;
     margin-top: 30px;
     border: 3px solid #fff;
+}
+
+label {
+    display: inline-block;
+    width: 300px;
+}
+
+.label-container {
+    padding-bottom: 20px;
 }
