--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -34,6 +34,10 @@
     border: 3px solid #fff;
 }
 
+.border {
+    border: 1px solid #fff;
+}
+
 label {
     display: inline-block;
     width: 300px;
@@ -41,4 +45,30 @@ label {
 
 .label-container {
     padding-bottom: 20px;
+}
+
+.tr-products {
+    font-size: 1.4rem;
+}
+
+.th-products {
+    padding: 15px;
+}
+
+#imageModal img {
+    max-width: 300px;
+    max-height: 400px;
+    margin: 0 auto;
+    border-radius: 8px;
+}
+
+#imageModal button {
+    font-size: 24px;
+    font-weight: bold;
+    color: #555;
+    cursor: pointer;
+}
+
+#imageModal button:hover {
+    color: black;
 }
