--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -135,3 +135,9 @@ label {
 .tr-container th {
     font-size: 1.2rem;
 }
+
+.delivery-confirm {
+    color: green;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
