--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -193,3 +193,26 @@ label {
 .email-form .btn-submit:hover {
     background-color: #0056b3;
 }
+
+.search-container {
+    display: flex;
+    justify-content: center;
+}
+
+.search-btn {
+    padding: 13px;
+}
+
+.search-input { 
+    color: #000;
+}
+
+.no-result-found {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.no-result-found p {
+    font-size: 1.2rem;
+}
