--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -150,7 +150,8 @@ a:focus {
 }
 
 .custom_nav-container .navbar-nav .nav-item .nav-link {
-    padding: 5px 20px;
+    padding: 5px 0;
+    margin-left: 20px;
     color: #131313;
     text-align: center;
     text-transform: uppercase;
@@ -1263,3 +1264,7 @@ form textarea {
     font-size: 1.2rem;
 }
 
+.custom-indicators {
+    justify-content: center !important;
+    margin-top: 200px !important;
+}
