--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -54,9 +54,14 @@ label {
     padding-bottom: 20px;
 }
 
+.img-label-container .img-label{
+    padding-top: 40px;
+    width: 160px;
+}
+
 .label-container button {
     background-color: #fff;
-    padding: 2px 20px;
+    padding: 8px 20px;
     border-radius: 4px;
     color: #000;
 
@@ -69,10 +74,9 @@ label {
 }
 
 .choose-image-input {
-    width: 135px;
     display: inline-block;
-    padding: 40px;
-    margin-left: 50px;
+    padding: 10px;
+    margin-left: 20px;
     margin-top: 20px;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -89,6 +93,7 @@ label {
     margin-top: 8px;
     width: 120px;
 }
+
 .show-image-container {
     padding-top: 40px;
     text-align: center;
